--- a/css/application.css
+++ b/css/application.css
@@ -4,8 +4,5 @@
 
 #map {
 	width: 100%;
-	height: 96%; /* can't be 100% or the attributions get cut off */
-	position: absolute;
-	margin-top: -20px;
-	z-index: -998;
+	height: 600px; /* can't be 100% or the attributions get cut off */
 }
