--- a/css/application.css
+++ b/css/application.css
@@ -4,5 +4,34 @@
 
 #map {
 	width: 100%;
-	height: 600px; /* can't be 100% or the attributions get cut off */
+	height: 750px; 
 }
+
+
+/* =======================================================
+   Sidebar
+======================================================= */
+
+h4.slider-label {
+	padding: 0;
+	margin: 0 0 15px -5px;
+}
+
+span.weight {
+	float: right;
+	margin-top: -40px;
+}
+
+span.weight input {
+	border: none;
+	box-shadow: none;
+	background: none;
+	text-align: right;
+	font-weight: bold;
+	font-size: 18px;
+}
+
+
+/* =======================================================
+   Summary
+======================================================= */
