--- a/static/css/application.css
+++ b/static/css/application.css
@@ -13,7 +13,7 @@
 ======================================================= */
 
 h4.slider-label {
-	padding: 0;
+	padding: 0 5px 0 0;
 	margin: 0 0 15px -5px;
 }
 
