--- a/static/css/application.css
+++ b/static/css/application.css
@@ -1,10 +1,40 @@
 /* =======================================================
+   General styles
+======================================================= */
+
+
+/*
+body {
+	font-family: 'Open Sans', sans-serif;
+}
+*/
+
+.navbar .brand {
+	font-size: 17px;
+	font-weight: 700;
+}
+
+.well {
+	padding: 10px 15px 15px 15px;
+	margin: 0 15px 19px 0;
+	-moz-box-shadow: none;
+	-webkit-box-shadow: none;
+	box-shadow: none;
+}
+
+.nav-pills .dropdown-menu {
+	z-index: 999;
+}
+
+
+/* =======================================================
    Map
 ======================================================= */
 
 #map {
 	width: 100%;
-	height: 750px; 
+	height: 600px; 
+	border: 1px solid #ccc;
 }
 
 
@@ -15,11 +45,12 @@
 h4.slider-label {
 	padding: 0 5px 0 0;
 	margin: 0 0 15px -5px;
+	font-size: 14px;
 }
 
 span.weight {
 	float: right;
-	margin-top: -40px;
+	margin-top: -36px;
 }
 
 span.weight input {
@@ -31,7 +62,72 @@ span.weight input {
 	font-size: 18px;
 }
 
+#sidebar {
+	max-height: 710px;
+	overflow-y: scroll;
+}
+
+.nav-tabs {
+	width: 96%;
+}
+
+.bold {
+	font-weight: bold;
+}
+
+#summary {
+	margin-right: 15px;
+}
+
+#main {
+	position: fixed;
+	width: 100%;
+	height: 660px;
+	overflow: hidden;
+}
 
 /* =======================================================
-   Summary
+   Scrollbar
 ======================================================= */
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+ 
+/* Track */
+::-webkit-scrollbar-track {
+    -webkit-border-radius: 5px;
+    border-radius: 10px;
+	background-color: #f5f5f5;
+	border: 1px solid #e3e3e3;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: #c2c2c2;
+}
+::-webkit-scrollbar-thumb:window-inactive {
+	background: #c2c2c2; 
+}
+
+
+/* =======================================================
+   Color Ramps
+======================================================= */
+
+#color-ramp-menu {
+	padding: 15px 0 15px 0;
+}
+
+#clearButton {
+	position: absolute;
+	z-index: 999;
+	left: 10px;
+	bottom: 10px;
+}
+
+#clearButton {
+	color: #fff !important;
+}
