--- a/static/css/leaflet.draw.css
+++ b/static/css/leaflet.draw.css
@@ -56,6 +56,7 @@
 }
 
 .leaflet-draw-actions li:last-child a {
+	-moz-border-radius:    0 4px 4px 0;
 	-webkit-border-radius: 0 4px 4px 0;
 	        border-radius: 0 4px 4px 0;
 }
