--- a/static/css/application.css
+++ b/static/css/application.css
@@ -15,8 +15,8 @@ body {
 }
 
 .well {
-	padding: 10px 15px 15px 15px;
-	margin: 0 15px 19px 0;
+	padding: 8px 15px 10px 15px;
+	margin: 0 15px 15px 0;
 	-moz-box-shadow: none;
 	-webkit-box-shadow: none;
 	box-shadow: none;
@@ -72,6 +72,7 @@ span.weight input {
 
 #summary {
 	margin-right: 15px;
+	overflow-y: scroll;
 }
 
 #main {
