Moved the legend and options below the map, edited application.js to fix the window resizing, made the color ramp dropdown go up instead of down

--- a/static/css/application.css
+++ b/static/css/application.css
@@ -26,6 +26,12 @@ body {
 	z-index: 999;
 }
 
+#wrap {
+	position: fixed;
+	bottom: 0;
+	width: 70%;
+	margin-top: 10px;
+}
 
 /* =======================================================
    Map
@@ -127,3 +133,4 @@ span.weight input {
 #clearButton {
 	color: #fff !important;
 }
+
