--- a/static/css/application.css
+++ b/static/css/application.css
@@ -2,6 +2,10 @@
    General styles
 ======================================================= */
 
+h4 {
+	line-height: 16px;
+}
+
 
 /*
 body {
@@ -15,8 +19,8 @@ body {
 }
 
 .well {
-	padding: 8px 15px 10px 15px;
-	margin: 0 15px 15px 0;
+	padding: 8px 10px 8px 15px;
+	margin: 0 15px 8px 0;
 	-moz-box-shadow: none;
 	-webkit-box-shadow: none;
 	box-shadow: none;
@@ -49,9 +53,10 @@ body {
 ======================================================= */
 
 h4.slider-label {
-	padding: 0 5px 0 0;
+	padding: 0 2px 0 0;
 	margin: 0 0 15px -5px;
-	font-size: 14px;
+	font-size: 12px;
+	font-weight: normal;
 }
 
 span.weight {
