Added new content to the about popup

--- a/static/css/application.css
+++ b/static/css/application.css
@@ -37,6 +37,11 @@ body {
 	margin-top: 10px;
 }
 
+.modal-body p {
+	font-size: 13px;
+	line-height: 18px;
+}
+
 /* =======================================================
    Map
 ======================================================= */
